--- a/app/views/tolk/locales/all.html.erb
+++ b/app/views/tolk/locales/all.html.erb
@@ -58,7 +58,7 @@
                 <div class="translation col-md-6">
                   <%= hidden_field_tag :"translations[][id]", phrase.translation.id %>
                   <%= hidden_field_tag :"translations[][locale_id]", phrase.translation.locale_id %>
-                  <div>Translation: <a class="copy" href="#" tabindex="-1" title="Copy original translation">&larr;</a><br></div>
+                  <div>Translation: <a class="copy" href="#" tabindex="-1" title="Copy original translation">Copy original</a><br></div>
                   <% if multiline %>
                     <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(phrase.translation.text), :class => 'locale form-control' %>
                   <% else %>
