--- a/app/views/tolk/layouts/_main.html.erb
+++ b/app/views/tolk/layouts/_main.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag "tolk/application" %>
 
 <div class="container">
-  <% yield %>
+  <%= yield %>
 </div>
 
 <%= javascript_include_tag "tolk/application" %>
