--- a/app/assets/stylesheets/tolk/screen.css
+++ b/app/assets/stylesheets/tolk/screen.css
@@ -64,8 +64,7 @@ Translation tables
 
 .translations .warning {
   font-weight: bold;
-  font-size: 25px;
-  color: orange;
+  color: red;
   padding: 2px 4px;
   display: none;
   cursor: help;
