--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -3,14 +3,14 @@
     <link rel="alternate" type="application/rss+xml" title="RSS" href="<%= tolk.locale_path(@locale, :format => 'atom') -%>" />
   <% end %>
 
-  <h3 class="switch">Phrases missing translation (<%= @locale.count_phrases_without_translation %>) <small>(<%= link_to 'See completed translations', tolk.all_locale_path(@locale) %>)</small></h3>
+  <h3 class="switch"><%= t 'tolk.show.phrases_missing_title', count: @locale.count_phrases_without_translation %> <small>(<%= link_to t('tolk.show.see_completed'), tolk.all_locale_path(@locale) %>)</small></h3>
 
   <% if @locale.has_updated_translations? && action_name != 'updated' %>
     <div class="alert alert-info alert-dismissible">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      Some phrases have changed. <%= link_to "Update translations", tolk.updated_locale_path(@locale) %>.
+      <%= t 'tolk.show.changes' %> <%= link_to t('tolk.show.update_translations'), tolk.updated_locale_path(@locale) %>.
     </div>
   <% end %>
 
@@ -58,8 +58,8 @@
                     <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
                     <div>
                       Translation:
-                      <a class="copy" href="#" tabindex="-1" title="Copy original translation">Copy original</a>
-                      <span class="warning" title="Interpolation keys don't match">⚠</span>
+                      <a class="copy" href="#" tabindex="-1" title="Copy original translation"><%= t('tolk.show.copy_original') %></a>
+                      <span class="warning" title="<%= t('tolk.show.interpolation_mismatch') %>">⚠</span>
                     </div>
 
                     <% if multiline %>
@@ -70,7 +70,7 @@
                   </div>
                   <div class="original col-md-6">
                     <div>
-                      Original:
+                      <%= t 'tolk.show.original' %>
                     </div>
 
                     <% if multiline %>
@@ -95,14 +95,14 @@
           <% end %>
         </div>
         <div class="table_submit">
-          <p><%= locale_form.submit "Save changes", :class => 'save btn btn-success' %></p>
+          <p><%= locale_form.submit t('tolk.show.save'), :class => 'save btn btn-success' %></p>
         </div>
       <% end %>
       <div class="paginate text-center">
         <%= tolk_paginate @phrases %>
       </div>
     <% else %>
-      <p style="text-align: left">There aren't any missing or updated phrases that need translation.</p>
+      <p style="text-align: left"><%= t 'tolk.show.no_translations' %></p>
       <p>&nbsp;</p>
     <% end %>
   </div>
